--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "router": "^2.0.0",
     "socket.io": "^4.8.1",
     "typescript": "^5.7.2",
@@ -40,6 +42,8 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
-    "@types/jsonwebtoken": "^9.0.7"
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16"
   }
 }
