--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.3",
     "@types/socket.io": "^3.0.2",
+    "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-openid-connect": "^2.17.1",
@@ -32,9 +34,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "resend": "^4.1.2",
     "router": "^2.0.0",
     "socket.io": "^4.8.1",
     "typescript": "^5.7.2",
@@ -43,6 +47,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16"
   }
