--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
+    "@google/genai": "^0.6.1",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
@@ -31,11 +32,16 @@
     "express": "^4.21.2",
     "express-openid-connect": "^2.17.1",
     "express-validator": "^7.2.1",
+    "google": "^2.1.0",
+    "groq-sdk": "^0.17.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
+    "nodecache": "^0.0.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "openai": "^4.89.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "resend": "^4.1.2",
