--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "express-validator": "^7.2.1",
     "google": "^2.1.0",
     "groq-sdk": "^0.17.0",
+    "json5": "^2.2.3",
     "jsonwebtoken": "^9.0.2",
+    "mediasoup": "^3.15.7",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
