--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.21.2",
     "express-openid-connect": "^2.17.1",
     "express-validator": "^7.2.1",
+    "firebase-admin": "^13.2.0",
     "google": "^2.1.0",
     "groq-sdk": "^0.17.0",
     "json5": "^2.2.3",
